@@ -18,7 +18,7 @@ endif
 
 # define the physics packages to build this problem
 EOS_DIR := helmholtz
-CONDUCTIVITY_DIR := timmes_stellar
+CONDUCTIVITY_DIR := stellar
 
 #NETWORK_TOP_DIR := $(ASTRODEV_DIR)/networks
 #NETWORK_DIR := rprox
